# datasheet2spice

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  RUN.bat  RUN_WEBPLOTDIGITIZER.bat  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  datasheet_case.yml  feature_request.yml  model_accuracy.yml
.github/workflows/: pages.yml  tests.yml
artifacts/research/datasheet-model-toolkit/: research_summary.md  roadmap.md
artifacts/research/datasheet-model-validation/: all-dialects-generation-benchmark.json  all-dialects-generation-benchmark.md  ltspice-smoke-benchmark.json  ltspice-smoke-benchmark.md  validation_summary.md
artifacts/research/ltspice-smoke/: rc_smoke.cir
artifacts/research/mosfet-switching-benchmark/: research_summary.md
artifacts/research/s4661-model-improvement/: research_summary.md
docs/: _config.yml  architecture.md  deployment_modes.md  development.md  index.md  interface_contracts.md  license_strategy.md  limitations.md  model_validation.md  modeling.md  plugins.md  quickstart.md  raster_digitization.md  roadmap.md  schema.md  spice_dialects.md  webapp.md  workbench.md  workbench_app.html
docs/assets/: model_emitters.js  pdf_extractors.js  workbench_app.js
examples/: README.md
examples/demo_sic_diode/: device.json
examples/demo_sic_mosfet/: README.md  capacitance.csv  device.json
examples/minimal_device/: README.md  device.json
examples/plugin_hello/: README.md  pyproject.toml
examples/plugin_hello/datasheet2spice_hello_plugin/: __init__.py
src/datasheet2spice/: __init__.py  cli.py  component_profiles.py  contracts.py  curves.py  dialects.py  evaluation.py  fitting.py  plugins.py  quality.py  report.py  runtime.py  schema.py  service.py  units.py  validate.py  webapp.py
src/datasheet2spice/emitters/: __init__.py  abm.py  diode.py  vdmos.py
src/datasheet2spice/extractors/: __init__.py  csv_curves.py  curve_digitizer.py  pdf_diode.py  pdf_evidence.py  pdf_mosfet.py  pdf_tables.py  pymupdf_vector.py  raster_digitizer.py
src/datasheet2spice/validators/: __init__.py  schema.py
tests/: test_architecture_contracts.py  test_cli.py  test_contracts.py  test_diode_support.py  test_extractors.py  test_fitting_evaluation.py  test_pdf_mosfet_extractor.py  test_plugins.py  test_quality.py  test_raster_digitizer.py  test_schema_emitters.py  test_units.py  test_web_frontend.py  test_webapp.py
tools/: extract_s4661_fig19_capacitance.py  mosfet_model_packager.py  sync_web_frontend.py
validation/: README.md  public_datasheet_cases.json
validation/golden/: demo_sic_diode.case.json
web/: README.md  workbench_app.html
web/assets/: model_emitters.js  module_contracts.js  workbench_runtime.js
